2010-02-03  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* README.en.txt, README.de.txt: Update for 2.0.2-beta1 release.

2010-02-02  Werner Koch  <wk@g10code.com>

	* beta-warning.txt: New.
	* README.en.txt, README.de.txt: Add Beta warning tag.

2010-02-01  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
 
	 * logo/gpg4win-nsis-wizard-uninstall-164x314.bmp: Update image.

2010-01-21  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/reporting-bugs-de.htm4, website/reporting-bugs.htm4: fixed
	 link to the compendium subpage that has the problem seeking
	 instructions.

2009-09-29  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/versions.m4: Update Kleopatra version.

	 * website/index.htm4, website/index-de.htm4: Formatting. Add
	 announcement.

	 * website/documentation.htm4, website/documenation-de.htm4:
	 Change gpg4win version.

	 * website/download.htm4, website/download-de.htm4: Add more
	 2.0.1 information and links. Formatting.

2009-09-28  Werner Koch  <wk@g10code.com>

	* Makefile.am (EXTRA_DIST): Add the other README files.

2009-09-14  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/fdl-book.tex: Change appendix chapter numbering (for
	hyperlatex) after adding glossary.

	* manual/gpg4win-compendium-de.tex: Add glossary and legend.

	* manual/gpg4win-compendium-de.tex: Add comment about AES and OL.

2009-09-10  Bernhard Reiter <bernhard@intevation.de>
	* website/download-de.htm4, website/download.htm4: Moved 2.0.1rc1
	  to the top. Added sha1sum and direct link to the OpenPGP sig to it.

	* website/index.htm4, website/index-de.htm4: Added stronger hints
	  for Outlook users to use 2.0.1rc1.

	* website/README: Added warning that latin1 locale might be needed
	  for building.

2009-09-03  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/versions.m4: Update Kleopatra link.

2009-09-01  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/index.htm4, website/download.htm4