@@ -1,3 +1,7 @@
+2010-02-03  Werner Koch  <wk@g10code.com>
+
+	* logo/Makefile.am (EXTRA_DIST): Add missing nsis icons.
+
 2010-02-03  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
 
 	* README.en.txt, README.de.txt: Update for 2.0.2-beta1 release.
